--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,41 @@
 .aider*
 .env
+
+# Python virtual environments
+venv/
+env/
+.venv/
+ENV/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Coverage
+.coverage
+htmlcov/
+.coverage.*
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
