--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,105 @@ htmlcov/
 clinedocs/
 .hypothesis/
 
+# Large Model Files (>100MB)
+models/*.gguf
+models/*.bin
+models/*.safetensors
+models/*.pt
+models/*.pth
+models/*.onnx
+
+# Cache and temporary files
+cache/
+.cache/
+*.cache
+.pytest_cache/
+.ruff_cache/
+
+# Log files
+*.log
+server.log
+crawl.log
+debug.log
+
+# Test results and reports
+test_performance_results.json
+test-results/
+playwright-report/
+coverage.xml
+.coverage.*
+
+# Scraped data and outputs
+crawl_result_*.json
+*_docs.json
+*_sources.json
+*_analysis.json
+scraped_*/
+output_*/
+
+# Temporary and debug files
+debug_*.py
+test_*.py
+temp_*.py
+*_temp.*
+*_debug.*
+*_test.*
+
+# Performance and benchmark files
+benchmark_*.py
+measure_*.py
+analyze_*.py
+optimize_*.py
+run_*_tests.py
+*_performance.*
+
+# Auto-generated files
+conftest.py
+pytest.ini.backup
+pytest.ini.new
+
+# Development scripts
+start_*.py
+verify_*.py
+fix_*.py
+quick_*.py
+
+# Target files for scraping
+*_targets.yaml
+*_comprehensive_targets.yaml
+
+# Node.js (for GUI tests)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Playwright
+test-results/
+playwright-report/
+playwright/.cache/
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Archive and backup files
+archive/
+backup/
+*.bak
+*.backup
+*.old
+
+# Large documentation files
+comprehensive_scraped_libraries/
+improved_scraped_libraries/
+scraped_libraries/
+
+# UV lock file (too large and auto-generated)
+uv.lock
+
